# PARCM-P4

./: .gitignore  README.md
GRPCp4/: CMakeLists.txt  CMakePresets.json
GRPCp4/ThreadTool/: ThreadPool.cpp  ThreadPool.h
GRPCp4/proto/: hello.proto  proto_compile.bat  scene.proto
GRPCp4/src_client/: AppWindow.cpp  AppWindow.h  Camera.cpp  Camera.h  ClientMain.cpp  ClientTest.cpp  ClientTest.h  Component.h  Constant.h  ConstantBuffer.cpp  ConstantBuffer.h  CreditsScreen.h  DeviceContext.cpp  DeviceContext.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  GraphicsEngine.cpp  GraphicsEngine.h  HierarchyScreen.cpp  HierarchyScreen.h  IndexBuffer.h  InputListener.h  InputSystem.h  InspectorScreen.cpp  InspectorScreen.h  MenuToolbar.cpp  MenuToolbar.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  MeshRenderer.cpp  MeshRenderer.h  MyTransform.cpp  PixelShader.cpp  PixelShader.h  Point.h  Prerequisites.h  (+26 more)
GRPCp4/src_client/App/: AppWindow.cpp  AppWindow.h  PixelShader.hlsl
GRPCp4/src_client/GameEngine/Camera/: Camera.cpp  Camera.h  SceneCameraHandler.cpp  SceneCameraHandler.h
GRPCp4/src_client/GameEngine/Component/: Component.h  MeshRenderer.cpp  MeshRenderer.h  Renderer.cpp  Renderer.h
GRPCp4/src_client/GameEngine/GameObject/: GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  Types.h
GRPCp4/src_client/GameEngine/GraphicsEngine/: EngineTime.cpp  EngineTime.h  GraphicsEngine.cpp  GraphicsEngine.h  Prerequisites.h
GRPCp4/src_client/GameEngine/GraphicsEngine/RenderSystem/: ConstantBuffer.h  DeviceContext.cpp  DeviceContext.h  IndexBuffer.cpp  IndexBuffer.h  PixelShader.h  RenderSystem.cpp  RenderSystem.h  SwapChain.h  VertexBuffer.cpp  VertexBuffer.h  VertexShader.h
GRPCp4/src_client/GameEngine/GraphicsEngine/ResourceManager/: Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h
GRPCp4/src_client/GameEngine/GraphicsEngine/TextureManager/: Texture.cpp  Texture.h  TextureManager.h
GRPCp4/src_client/GameEngine/InputSystem/: InputListener.h  InputSystem.cpp  InputSystem.h
GRPCp4/src_client/GameEngine/Math/: Matrix4x4.h  MyTransform.cpp  MyTransform.h  Vector2D.h  Vector3D.h  Vector4D.h  VertexMesh.h
GRPCp4/src_client/GameEngine/Mesh/: Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h
GRPCp4/src_client/GameEngine/SceneManager/: PreloadSceneTask.cpp  PreloadSceneTask.h  SceneLoadTask.cpp  SceneLoadTask.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h
GRPCp4/src_client/GameEngine/UI/: UIManager.cpp  UIManager.h  UINames.h  UIScreen.cpp  UIScreen.h
GRPCp4/src_client/GameEngine/UI/Screens/: CreditsScreen.cpp  CreditsScreen.h  FPSDisplay.cpp  FPSDisplay.h  HierarchyScreen.cpp  HierarchyScreen.h  InspectorScreen.cpp  InspectorScreen.h  MenuToolbar.cpp  MenuToolbar.h  SceneSelector.cpp  SceneSelector.h
GRPCp4/src_client/GameEngine/WindowingSystem/: Window.cpp  Window.h
GRPCp4/src_server/: GRPCp4.h  HelloServer.cpp  HelloServer.h  SceneServer.cpp  SceneServer.h  ServerMain.cpp
